--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "dependencies": {
     "@expo/metro-runtime": "~3.2.1",
     "@gorhom/bottom-sheet": "^4.6.4",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
-    "@rneui/base": "^4.0.0-rc.8",
-    "@rneui/themed": "^4.0.0-rc.8",
     "expo": "~51.0.24",
+    "expo-constants": "~16.0.2",
+    "expo-dev-client": "~4.0.21",
+    "expo-device": "~6.0.2",
     "expo-linear-gradient": "~13.0.2",
+    "expo-notifications": "~0.28.14",
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.12.5",
     "jotai": "^2.9.1",
@@ -27,14 +30,14 @@
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "~3.22.0",
+    "react-native-screens": "~3.31.1",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
     "tailwindcss": "^3.3.2",
-    "typescript": "^5.1.3"
+    "typescript": "^5.3.3"
   },
   "private": true
 }
