--- a/app.json
+++ b/app.json
@@ -2,6 +2,7 @@
   "expo": {
     "name": "letsPush",
     "slug": "letsPush",
+    "scheme": "bevvarra.com",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -13,7 +14,10 @@
     },
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.connorn314.letsPush"
+      "bundleIdentifier": "com.connorn314.letsPush",
+      "infoPlist": {
+        "LSApplicationQueriesSchemes": ["strava"]
+      }
     },
     "android": {
       "adaptiveIcon": {
