--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "main": "expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
+  },
+  "jest": {
+    "preset": "jest-expo"
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.2.3",
@@ -16,14 +19,20 @@
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "axios": "^1.7.5",
     "expo": "~51.0.28",
+    "expo-auth-session": "~5.5.2",
     "expo-constants": "~16.0.2",
     "expo-dev-client": "~4.0.24",
     "expo-device": "~6.0.2",
     "expo-linear-gradient": "~13.0.2",
+    "expo-linking": "~6.3.1",
     "expo-notifications": "~0.28.16",
     "expo-status-bar": "~1.12.1",
+    "expo-web-browser": "~13.0.3",
     "firebase": "^10.12.5",
+    "firebase-admin": "^12.4.0",
+    "firebase-functions": "^5.1.0",
     "jotai": "^2.9.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
@@ -33,7 +42,8 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "~3.31.1",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "strava-v3": "^2.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
