--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "~3.31.1",
     "react-native-web": "~0.19.10",
-    "strava-v3": "^2.2.1"
+    "strava-v3": "^2.2.1",
+    "react-native-svg": "15.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
