--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expo-linear-gradient": "~13.0.2",
     "expo-linking": "~6.3.1",
     "expo-notifications": "~0.28.16",
+    "expo-router": "~3.5.23",
     "expo-status-bar": "~1.12.1",
     "expo-web-browser": "~13.0.3",
     "firebase": "^10.12.5",
@@ -45,8 +46,7 @@
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
     "react-native-web": "~0.19.10",
-    "strava-v3": "^2.2.1",
-    "expo-router": "~3.5.23"
+    "strava-v3": "^2.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
