--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@expo-google-fonts/benchnine": "^0.2.3",
+    "@expo-google-fonts/inter": "^0.2.3",
     "@expo/metro-runtime": "~3.2.3",
     "@gorhom/bottom-sheet": "^4.6.4",
     "@react-native-async-storage/async-storage": "1.23.1",
@@ -27,6 +29,7 @@
     "expo-constants": "~16.0.2",
     "expo-dev-client": "~4.0.24",
     "expo-device": "~6.0.2",
+    "expo-font": "~12.0.10",
     "expo-linear-gradient": "~13.0.2",
     "expo-linking": "~6.3.1",
     "expo-notifications": "~0.28.16",
