save progress on welcome flow

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "@types/lodash": "^4.17.10",
     "axios": "^1.7.5",
     "expo": "~51.0.28",
     "expo-auth-session": "~5.5.2",
@@ -40,6 +41,8 @@
     "firebase-admin": "^12.4.0",
     "firebase-functions": "^5.1.0",
     "jotai": "^2.9.1",
+    "lodash": "^4.17.21",
+    "lodash.debounce": "^4.0.8",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
